[gd_scene load_steps=2 format=3 uid="uid://screen_class_select"]

[ext_resource type="Script" path="res://scripts/ui/screens/class_select_screen.gd" id="1_l90le"]

[node name="ClassSelectScreen" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l90le")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="Margin"]
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="Margin/VBox"]
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Margin/VBox/Header"]
text = "Choose a Class"
theme_override_font_sizes/font_size = 26
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="Margin/VBox/Header"]
unique_name_in_owner = true
text = "Back"
size_flags_horizontal = 1

[node name="Scroll" type="ScrollContainer" parent="Margin/VBox"]
size_flags_vertical = 3

[node name="ClassList" type="VBoxContainer" parent="Margin/VBox/Scroll"]
unique_name_in_owner = true
name = "ClassList"
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
text = "Select a class to begin your run."
horizontal_alignment = 1
